--- a/Docker-compose/nginx/conf.d/default.conf
+++ b/Docker-compose/nginx/conf.d/default.conf
@@ -22,6 +22,7 @@ server {
     try_files $uri/index.html $uri @satosa;
 
     location @satosa {
+      rewrite /.well-known/jar-issuer/OpenID4VP /OpenID4VP/.well-known/jar-issuer break;
       include /etc/nginx/uwsgi_params;
       
       uwsgi_pass satosa-saml2spid:10000;
