fix: iam-proxy-italia replaces every satosa-saml2spid occurency

--- a/example/uwsgi_setup/uwsgi/uwsgi.ini
+++ b/example/uwsgi_setup/uwsgi/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-project     = satosa-saml2spid
+project     = iam-proxy-italia
 base        = /opt
 
 chdir       = %(base)/%(project)/example-openid4vp
@@ -42,4 +42,4 @@ harakiri    = 20
 buffer-size=32768
 
 pidfile     = /var/log/uwsgi/%(project).pid
-touch-reload    = %(base)/%(project)/example-openid4vp/proxy_conf.yaml
+touch-reload    = %(base)/%(project)/proxy_conf.yaml
