--- a/Docker-compose/nginx/conf.d/default.conf
+++ b/Docker-compose/nginx/conf.d/default.conf
@@ -24,7 +24,7 @@ server {
     location @satosa {
       include /etc/nginx/uwsgi_params;
       
-      uwsgi_pass satosa-saml2spid:10000;
+      uwsgi_pass iam-proxy-italia:10000;
       uwsgi_param Host $host;
       uwsgi_param X-Real-IP $remote_addr;
       uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
