feat: route configuration for jwt-vc-issuer endpoint

--- a/Docker-compose/nginx/conf.d/default.conf
+++ b/Docker-compose/nginx/conf.d/default.conf
@@ -23,6 +23,7 @@ server {
 
     location @satosa {
       rewrite /.well-known/jar-issuer/OpenID4VP /OpenID4VP/.well-known/jar-issuer break;
+      rewrite /.well-known/jwt-vc-issuer/OpenID4VP /OpenID4VP/.well-known/jwt-vc-issuer break;
       include /etc/nginx/uwsgi_params;
       
       uwsgi_pass satosa-saml2spid:10000;
