--- a/example/uwsgi_setup/uwsgi/uwsgi.ini
+++ b/example/uwsgi_setup/uwsgi/uwsgi.ini
@@ -2,7 +2,7 @@
 project     = iam-proxy-italia
 base        = /opt
 
-chdir       = %(base)/%(project)/example-openid4vp
+chdir       = %(base)/%(project)/project
 
 uid         = satosa
 gid         = satosa
