--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,9 +30,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Python dependencies
       run: |
-        pip install spid-sp-test>=1.2.17 flake8 pipx poetry
+        pip install --upgrade pip
+        pip install flake8 pipx poetry
         pip install --upgrade packaging
         poetry install
+        source $(poetry env info | grep -m1 Path  | awk -F" " {'print $2'})/bin/activate
+        pip install "spid-sp-test>=1.2.17"
     - name: Ispect Python dependencies
       run: |
         poetry show --tree
