--- a/Docker-compose/docker-compose.yml
+++ b/Docker-compose/docker-compose.yml
@@ -61,13 +61,13 @@ services:
       - iam-proxy-italia
 
   iam-proxy-italia:
-    #image: ghcr.io/italia/iam-proxy-italia:latest
-    #image: iam-proxy-italia:latest
-    build: 
-        context: ../      
-        args: 
-            - NODE_ENV=local        
-        dockerfile: Dockerfile
+    image: ghcr.io/italia/iam-proxy-italia:latest
+    # image: iam-proxy-italia:latest
+    # build: 
+        # context: ../      
+        # args: 
+            # - NODE_ENV=local        
+        # dockerfile: Dockerfile
     container_name: iam-proxy-italia
     # depends_on:
     #  - satosa-mongo
