--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,11 +30,15 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Python dependencies
       run: |
-        pip install spid-sp-test>=1.2.17
-        pip install flake8
-    - name: Ispect Python dependencies
+        pip install --upgrade pip
+        pip install flake8 pipx poetry
+        pip install --upgrade packaging
+        poetry install
+        source $(poetry env info | grep -m1 Path  | awk -F" " {'print $2'})/bin/activate
+        pip install "spid-sp-test>=1.2.17"
+    - name: Inspect Python dependencies
       run: |
-        pip list
+        poetry show --tree
     - name: Lint with flake8
       run: |
         ## stop the build if there are Python syntax errors or undefined names
@@ -65,13 +69,19 @@ jobs:
     - name: spid-sp-test SPID metadata, requests and responses
       run: |
         cd Docker-compose/satosa-project
+        source $(poetry env info | grep -m1 Path | awk -F" " {'print $2'})/bin/activate
+        export PATH=$PATH:$(poetry env info | grep -m1 Path | awk -F" " {'print $2'})/bin
         spid_sp_test --idp-metadata > metadata/idp/spid-sp-test.xml
         spid_sp_test --metadata-url https://localhost/spidSaml2/metadata --authn-url "http://localhost:8000/saml2/login/?idp=https://localhost/Saml2IDP/metadata&next=/saml2/echo_attributes&idphint=https%253A%252F%252Flocalhost%253A8443" -ap spid_sp_test.plugins.authn_request.SatosaSaml2Spid --extra --debug ERROR -tr
     - name: spid-sp-test CIE id metadata
       run: |
         cd Docker-compose/satosa-project
+        source $(poetry env info | grep -m1 Path | awk -F" " {'print $2'})/bin/activate
+        export PATH=$PATH:$(poetry env info | grep -m1 Path | awk -F" " {'print $2'})/bin
         spid_sp_test --profile cie-sp-public --metadata-url https://localhost/cieSaml2/metadata
     - name: spid-sp-test eIDAS FiCEP metadata
       run: |
         cd Docker-compose/satosa-project
+        source $(poetry env info | grep -m1 Path | awk -F" " {'print $2'})/bin/activate
+        export PATH=$PATH:$(poetry env info | grep -m1 Path | awk -F" " {'print $2'})/bin
         spid_sp_test --profile ficep-eidas-sp --metadata-url https://localhost/spidSaml2/metadata
