--- a/example/plugins/backends/spidsaml2_backend.yaml
+++ b/example/plugins/backends/spidsaml2_backend.yaml
@@ -51,6 +51,7 @@ config:
         email_address: !ENV SATOSA_CONTACT_PERSON_EMAIL_ADDRESS
         telephone_number: !ENV SATOSA_CONTACT_PERSON_TELEPHONE_NUMBER
         FiscalCode: !ENV SATOSA_CONTACT_PERSON_FISCALCODE
+        IPACode: !ENV SATOSA_CONTACT_PERSON_IPA_CODE
         Public: ''
       # - {'contact_type': 'other', 'telephone_number': '+3984756344785', 'email_address': 'info@example.org', 'VATNumber': 'IT12345678901', 'FiscalCode': 'XYasdasdadasdGGJ000W', 'Private': '' }
       # - {'contact_type': 'billing', 'telephone_number': '+3984756344785', 'email_address': 'info@example.org', 'company': 'example s.p.a.', 'CodiceFiscale': 'NGLMRA80A01D086T', 'IdCodice': '983745349857', 'IdPaese': 'IT', 'Denominazione': 'Destinatario Fatturazione', 'Indirizzo': 'via tante cose', 'NumeroCivico': '12', 'CAP': '87100', 'Comune': 'Cosenza', 'Provincia': 'CS', 'Nazione': 'IT' }
