--- a/Docker-compose/env.example
+++ b/Docker-compose/env.example
@@ -1,4 +1,4 @@
-SATOSA_HOSTNAME=localhost
+METADATA_ANDSATOSA_HOSTNAME=localhost
 SATOSA_BASE=https://${SATOSA_HOSTNAME:-localhost}
 SATOSA_BASE_STATIC=${SATOSA_BASE}/static
 SATOSA_DISCO_SRV=${SATOSA_BASE_STATIC}/disco.html
@@ -55,5 +55,5 @@ SATOSA_UI_LOGO_URL="https://example_organization.org/logo.png"
 SATOSA_UI_PRIVACY_URL_EN="https://example_organization.org/privacy"
 SATOSA_UI_PRIVACY_URL_IT="https://example_organization.org/it/privacy"
 
-# If set to true, satosa downloads IDEM's keys and IDPs from registry.spid.gov.it
-GET_IDEM_MDQ_KEY=true
+# If set to true, satosa downloads IDEM's keys and SPID / CIE / eIDAS metadata
+GET_METADATA_AND_KEY=true
