--- a/Docker-compose/nginx/conf.d/default.conf
+++ b/Docker-compose/nginx/conf.d/default.conf
@@ -26,7 +26,7 @@ server {
       rewrite /.well-known/jwt-vc-issuer/OpenID4VP /OpenID4VP/.well-known/jwt-vc-issuer break;
       include /etc/nginx/uwsgi_params;
       
-      uwsgi_pass iam-proxy-italia:10000;
+      uwsgi_pass satosa:10000;
       uwsgi_param Host $host;
       uwsgi_param X-Real-IP $remote_addr;
       uwsgi_param X-Forwarded-For $proxy_add_x_forwarded_for;
