feat: make request ACS index configurable (#190)
* feat: make request ACS index configurable

* Apply suggestions from code review

---------

Co-authored-by: Giuseppe De Marco <demarcog83@gmail.com>

--- a/example/plugins/backends/spidsaml2_backend.yaml
+++ b/example/plugins/backends/spidsaml2_backend.yaml
@@ -76,6 +76,9 @@ config:
     entityid: '<base_url>/<name>/metadata'
     accepted_time_diff: 10
 
+    # Specify the AttributeConsumingServiceIndex attribute in the request (default 0).
+    # acs_index: 0
+
     service:
       sp:
         ui_info:
