--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ Docker-compose/djangosaml2_sp/*
 Docker-compose/mongo/db/*
 Docker-compose/nginx/html/static/*
 Docker-compose/.env
+
+.idea
+*.iml
