--- a/Docker-compose/env.example
+++ b/Docker-compose/env.example
@@ -27,6 +27,12 @@ SATOSA_ENCRYPTION_KEY=CHANGE_ME!
 SATOSA_STATE_ENCRYPTION_KEY=CHANGE_ME!
 SATOSA_USER_ID_HASH_SALT=CHANGE_ME!
 
+# Auto update idp metadata and keys
+SATOSA_GET_IDEM_MDQ_KEY=true
+SATOSA_GET_SPID_IDP_METADATA=true
+SATOSA_GET_FICEP_IDP_METADATA=true
+SATOSA_GET_CIE_IDP_METADATA=true
+
 # Contact person data
 SATOSA_CONTACT_PERSON_EMAIL_ADDRESS=support.example@organization.org
 SATOSA_CONTACT_PERSON_TELEPHONE_NUMBER=+3906123456789
