--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,9 +39,9 @@ jobs:
     - name: Lint with flake8
       run: |
         ## stop the build if there are Python syntax errors or undefined names
-        flake8 --count --select=E9,F63,F7,F82 --show-source --statistics example
+        flake8 --count --select=E9,F63,F7,F82 --show-source --statistics iam-proxy-italia-project
         ## exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 --max-line-length 120 --count --exit-zero --statistics example
+        flake8 --max-line-length 120 --count --exit-zero --statistics iam-proxy-italia-project
     - name: docker compose
       run: |       
         cd Docker-compose
