--- a/iam-proxy-italia-project/internal_attributes.yaml
+++ b/iam-proxy-italia-project/internal_attributes.yaml
@@ -2,7 +2,7 @@ attributes:
   address:
     openid: [address.street_address]
     orcid: [addresses.str]
-    saml: [postaladdress, addressS, address]
+    saml: [postaladdress, address]
     openid4vp: [address]
   displayname:
     openid: [nickname]
